--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,7 @@ dist: trusty
 language: java
 jdk:
   - oraclejdk8
+
+script:
+  # JaCoCo is used to have code coverage, "-Pcoverage" activates the maven profile in the pom.xml
+  - mvn clean verify sonar:sonar -Pcoverage
