--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,4 @@ jdk:
   - oraclejdk8
 
 script:
-  # JaCoCo is used to have code coverage, "-Pcoverage" activates the maven profile in the pom.xml
-  - mvn clean verify sonar:sonar -Pcoverage
+  - mvn clean verify sonar:sonar
